Add JavaScript to toggle project details

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <link rel="stylesheet" href="css/styles.css">
 <body>
-    <!-- Header Section -->
     <header>
         <h1>Sajan Thavarasa</h1>
         <nav>
@@ -19,27 +18,43 @@
         </nav>
     </header>
 
-    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>I am Sajan a canadian born Tamil citizen living in Toronto. My interest are cars, video games, and playing badminton, On my journey so far I completed mostly was going to schools and trying to learn other skills.</p>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects">
         <h2>My Projects</h2>
-        <p>This is a placeholder for your projects. In future chapters, you’ll add real projects here.</p>
+        <div id="project-gallery">
+            <div class="project">
+                <h3>Dynamic Blog Website</h3>
+                <a href="https://sajant26.github.io/-dynamic-blog-website/" target="_blank">Visit the Dynamic Blog Website</a>.
+                <button class="show-details-btn">Show Details</button>
+                <div class="project-details" style="display: none;">
+                    <p>This project was a dynamic, multi-page blog website that uses JavaScript local storage to help with the post. </p>
+                </div>
+            </div>
+            <div class="project">
+                <h3>Assignment 2</h3>
+                <a href="https://sajant26.github.io/Assignment-2-Build-a-Web-Page-Using-the-HTML5-Web-Storage-API/" target="_blank">Visit the Web Storage API Project</a>.
+                <button class="show-details-btn">Show Details</button>
+                <div class="project-details" style="display: none;">
+                    <p>This prject I made a webpage that allows users to input their users and save it. The name then will be displayed at the bottom.</p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact Me</h2>
         <p>In the future, this will be a contact form. For now, just leave this as a placeholder.</p>
     </section>
 
-    <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Sajan Thavarasa</p>
     </footer>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
