Add initial form structure and implement form validation

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <script defer src="script.js"></script>
 </head>
 <link rel="stylesheet" href="css/styles.css">
 <body>
@@ -62,6 +63,7 @@
     
             <button type="submit">Submit</button>
         </form>
+        <div id="savedMessage">Saved!</div>
     </section>
 
     <footer>
@@ -69,6 +71,5 @@
     </footer>
 
 
-    <script src="script.js"></script>
 </body>
 </html>
